# pdqsort-adapter

./: CMakeLists.txt  README.md
metaconfigure/: description.json
src/: orlp.hpp
